# cas

./: .clang-format  CMakeLists.txt  cas.code-workspace  createSourcelist.sh  sourcelist.cmake
include/: expressionParser.hpp
include/expressions/: expression.hpp
include/math/: expressions.hpp  math.hpp
include/math/expressions/: addition.hpp  additionTerm.hpp  binaryExpression.hpp  constant.hpp  constantTerm.hpp  exponentiation.hpp  exponentiationTerm.hpp  expression.hpp  multiplication.hpp  multiplicationTerm.hpp  simplifier.hpp  term.hpp  terms.hpp  variable.hpp  variableTerm.hpp
src/: expressionParser.cpp  expressionPraser.cpp  main.cpp
src/expressions/: expression.cpp
src/math/: expressions.cpp  math.cpp
src/math/expressions/: addition.cpp  additionTerm.cpp  binaryExpression.cpp  constant.cpp  constantTerm.cpp  exponentiation.cpp  exponentiationTerm.cpp  expression.cpp  multiplication.cpp  multiplicationTerm.cpp  term.cpp  variable.cpp  variableTerm.cpp
src_old/: constant.cpp  exponentiation.cpp  exponentiation.hpp  expression.cpp  multiplication.cpp  multiplication.hpp  simplifier.cpp  variable.hpp
